@@ -13,6 +13,7 @@
 	* Changed internal limit processing to allow more flexible customization using hooks
 	* Added information about error 139 to the FAQ
 	* Fixed wrong default value for the title field
+	* Allow indexing period to be an expression
 
 2009-01-16  Dmitry Dulepov  <dmitry@typo3.org>
 
